force-app/main/default/objects/OrderItem/fields/Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Amount__c</fullName>
    <inlineHelpText>List Amount + Markup</inlineHelpText>
    <label>Unit Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>