force-app/main/default/objects/OrderItem/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <formula>Product2.Material_Code__c</formula>
    <label>Material Code</label>
    <type>Text</type>
</CustomField>