force-app/main/default/objects/OrderItem/fields/Package_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Package_Total_Amount__c</fullName>
    <label>Package Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>