force-app/main/default/objects/OrderItem/fields/Parent_ID_Config__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID_Config__c</fullName>
    <formula>CASESAFEID(OrderId)</formula>
    <label>Parent ID Config</label>
    <type>Text</type>
</CustomField>