force-app/main/default/objects/OrderItem/fields/Parent_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Parent Order Product)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>