force-app/main/default/objects/OrderItem/fields/Parent_SAP_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_SAP_Product_ID__c</fullName>
    <label>Parent SAP Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>